# lils

./: Cargo.toml  README.md
src/: cli.rs  config.rs  files.rs  main.rs  output.rs  sorting.rs  style.rs  util.rs
src/output/: entry.rs  long.rs  short.rs
