[package]
name = "lils"
description = "lils is not ls. modern directory listing CLI."
authors = ["Emma Alexandria <emma.jellemabutler@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.50", features = ["cargo", "derive"] }
crossterm = "0.29.0"
ignore = "0.4.24"
pathdiff = "0.2.3"
